# openresponses

./: .gitignore  pyproject.toml  terminal_bench_env.py
proxy/: __main__.py  cli.py  convert.py  server.py  store.py
proxy/handlers/: handle_anthropic_api.py  handle_responses_api.py  streaming.py
proxy/tests/manual_tests/: test_opencode_flow.py  test_responses_multi_turn_parallel_tools.py  test_responses_multi_turn_tool.py  test_responses_streaming.py  test_responses_streaming_store.py  test_responses_streaming_tools.py  test_responses_to_completions.py  test_responses_to_completions_store.py  test_responses_to_completions_tools.py  test_store_chaining.py  test_with_opencode.py
proxy/utils/: type_helpers.py  utils.py
schema/: openapi.json
src/layouts/: DocsLayout.astro
tests/manual_tests/: test_responses_to_completions.py  test_responses_to_completions_store.py  test_responses_to_completions_tools.py
